--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,5 @@ spring.datasource.username=postgres
 spring.datasource.password=sasa
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+eureka.client.service-url.defaultZone = http://localhost:8761/eureka
