--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,21 +1,2 @@
-#Configuracion microservicio
-
 spring.application.name=servicio-productos-optica
-server.port=8001
-
-spring.main.banner-mode=off
-logging.level.org.springframework=ERROR
-
-#Configuracion DB
-
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL95Dialect
-spring.datasource.initialization-mode=always
-spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/db_migracion_taller
-spring.datasource.username=postgres
-spring.datasource.password=sasa
-
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-
-eureka.client.service-url.defaultZone = http://localhost:8761/eureka
+spring.config.import=configserver:http://localhost:8888
